# milana_robot

./: .gitignore  CMakeLists.txt  blog_post.md  milana_robot.sln  readme.md
CAD/: FootEncoderAdapter.blend  Ramp.blend  Wheel.blend  readme.md
CAD/Meshes/: battery_holder.stl  big_ramp.stl  small_ramp.stl
CAD/Meshes/arm_mirror/: arm_joint_connector_c.stl  arm_joint_connector_double.stl  arm_rubber_negative.stl  lower_arm.stl  upper_arm.stl  upper_arm_gear_double.stl  upper_arm_gear_holder_double.stl  upper_arm_handle_holder.stl  upper_arm_slider_b_1.stl  upper_arm_slider_b_2.stl  upper_arm_slider_c.stl
CAD/Meshes/body/: body_back.stl  body_bottom.stl  body_front.stl  body_side_mirror.stl  body_top.stl  hip_gear_double.stl
CAD/Meshes/leg_mirror/: foot_encoder_adapter_1.stl  foot_encoder_adapter_2.stl  leg_gear.stl  leg_magnet_holder.stl  lower_leg_center.stl  lower_leg_side.stl  upper_leg_center.stl  upper_leg_encoder_cover.stl  upper_leg_side.stl  upper_leg_stabilisator.stl
CAD/Meshes/wheel_double/: wheel.stl  wheel_rubber_negative_form_1.stl  wheel_rubber_negative_form_2.stl  wheel_rubber_negative_form_3.stl
asr/: asr_server.cpp  asr_server.vcxproj  asr_server.vcxproj.filters  readme.md
common/: common.h  common_proxy.h  geometry.cpp  geometry.h  helper.cpp  helper.h  leaning.cpp  leaning.h  network.cpp  network.h  readme.md  time_helper.cpp  time_helper.h
common/odrive/: ODrive.cpp  ODrive.h  endpoint.cpp  endpoint.h  odrive_helper.h
control_ui/: control_ui.cpp  control_ui.h  control_ui.vcxproj  control_ui.vcxproj.filters  control_ui_client.cpp  control_ui_client.h  pendulum_simulation.cpp  pendulum_simulation.h  plot.cpp  plot.h  readme.md  simulation_ui.cpp  simulation_ui.h  video_recorder.cpp  video_recorder.h  webcam.cpp  webcam.h
extras/: BOM.ods  eulerlagrangian.ipynb  eulerlagrangian_cartpole.ipynb  linux_commands.md  readme.md
images/: readme.md
llm/: chat.cpp  chat.h  readme.md
logs/: monitor_log.cam  readme.md
models/: .gitignore  readme.md
odrive/: readme.md
robot/: asr_client.cpp  asr_client.h  balance_control.cpp  balance_control.h  battery.cpp  battery.h  body_acc.cpp  body_acc.h  command.cpp  command.h  foot_control.cpp  foot_control.h  ik.cpp  ik.h  joystick.cpp  joystick.h  leg_control.cpp  leg_control.h  main.cpp  main.h  pin.cpp  pin.h  readme.md  robot.vcxproj  robot.vcxproj.filters  server.cpp  server.h  servo.cpp  servo.h  statistics.cpp  statistics.h  tts_client.cpp  tts_client.h
robot/imu/: LSM6DS3.h  sensor_fusion.cpp  sensor_fusion.h  spi_imu.cpp  spi_imu.h
tts/: .gitignore  links.txt  readme.md  silerotest.py  sockettest.py
tts/coqui_tts/: .gitignore  Dockerfile.Jetson-Coqui  build.sh  run.sh  synthesize_server.py
tts/style_tts2/: .gitignore  Inference_LJSpeech_Server.py  readme.txt
tts/style_tts2/eSpeak NG/: .gitignore  version.txt
